--- a/style/delivery.css
+++ b/style/delivery.css
@@ -1722,6 +1722,77 @@ sup {
     }
 }
 
+@media screen and (min-width: 2001px) and (min-height: 500px) {
+    .concrete_delivery {
+        height: 1330px;
+    }
+    .concrete_delivery_heading {
+        font-size: 45px;
+    }
+    .concrete_delivery_txt {
+        font-size: 20px;
+        margin-top: 30px;
+    }
+    .delivery_cards {
+        margin: 0 auto;
+        height: 550px;
+        margin-top: 80px;
+        display: flex;
+        text-align: center;
+        justify-content: space-between;
+    }
+    .delivery_card {
+        height: 550px;
+        width: 400px;
+    }
+    .meters_text {
+        font-size: 45px;
+    }
+    sup {
+        font-size: 32px;
+    }
+    .flight_price {
+        font-size: 23px;
+        margin-top: 15px;
+    }
+    .flight_texts {
+        width: 85%;
+        margin: 0 auto;
+        margin-top: 18px;
+    }
+    .flight_text {
+        margin-top: 16px;
+        font-size: 18px;
+    }
+    .price_time {
+        margin-top: 10px;
+        font-size: 26px;
+    }
+    .price_downtime {
+        margin-top: 5px;
+        font-size: 26px;
+    }
+    .delivery_txt {
+        font-size: 32px;
+        margin-top: 80px;
+    }
+    .adress {
+        width: 600px;
+        font-size: 24px;
+    }
+    .note_1 {
+        font-size: 20px;
+    }
+    .note_2 {
+        font-size: 24px;
+        margin-top: 20px;
+    }
+    .delivery_cards {
+        width: 1300px;
+    }
+    
+}
+
 
 
 
