--- a/style/main.css
+++ b/style/main.css
@@ -1246,4 +1246,42 @@
     }
 }
 
+@media (min-width: 2001px) and (min-height: 500px) {
+    .main {
+        height: 1200px;
+    }
+    .main_text {
+        height: 100%;
+    }
+    .main_heading {
+        height: 330px;
+        font-size: 60px;
+    }
+    .main_heading_small_text {
+        font-size: 45px;
+    }
+    .main_info {
+        height: 450px;
+    }
+    .info_content {
+        height: 115px;
+    }
+    .info_picture {
+        width: 50px;
+        height: 50px;
+    }
+    .info_text {
+        height: 115px;
+        font-size: 20px;
+    }
+    .main_button {
+        width: 360px;
+        height: 85px;
+        margin-top: 40px;
+    }
+    .main_button button {
+        font-size: 35px;
+    }
+}
+
 
